Hero&Content section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,49 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    TURINYS
+    <div class="hero container bg-blue">
+        <div class="row">
+            <img src="./img/icon-logo.png" alt="Coming soon logo">
+            <h1>Coming soon</h1>
+            <p>An awesome new company for web resources is coming very soon. Enter your email to request an early invitation.</p>
+            <div class="clock">
+                CLOCK
+            </div>
+            <form>
+                SUBSCRIBE FORM
+            </form>
+            <div class="mouse">
+                MOUSE
+            </div>
+        </div>
+    </div>
+    <div class="content container">
+        <div class="row">
+            <div class="left">
+                <h3>About starup</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque odio modi a voluptate eum doloremque <a href="#">Matrox</a> laboriosam sunt aspernatur repellat.</p>
+                <div class="progress-bar">
+                    PROGRESS-BAR
+                </div>
+                <div class="progress-bar">
+                    PROGRESS-BAR
+                </div>
+                <div class="progress-bar">
+                    PROGRESS-BAR
+                </div>
+            </div>
+            <div class="right">
+                <h3>Have any question?</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque <a href="mailto:myemail@gmail.asd">myemail@gmail.asd</a> odio modi a tempore voluptate sunt aspernatur repellat.</p>
+                <form>
+                    MESSAGE FORM
+                </form>
+            </div>
+        </div>
+    </div>
+    <footer class="container bg-blue">
+        FOOTER
+    </footer>
 </body>
 </html>
 
