--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     PROGRESS-BAR
                 </div>
             </div>
-            <div class="right">
+        <div class="right">
                 <h3>Have any question?</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque <a href="mailto:myemail@gmail.asd">myemail@gmail.asd</a> odio modi a tempore voluptate sunt aspernatur repellat.</p>
                 <form>
@@ -59,7 +59,7 @@
             </div>
         </div>
     </div>
-    <footer class="container bg-blue">
+ <footer class="container bg-blue">
         <div class="row">
             <div class="socials">
                 ICON LIST
@@ -79,7 +79,7 @@
                         <a href="#">TrendyTheme</a>
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus minus dolorum ab laboriosam possimus repudiandae commodi odit <a href="#">Matrox</a> iste aperiam.</p>
+                <p>Matrox pack includes complete websites not just homepages, it comes with full website demos. Over 200+ ready html only for 17$. Purhase <a href="#">Matrox</a> Now!</p>
             </div>
         </div>
     </footer>
