--- a/index.html
+++ b/index.html
@@ -24,9 +24,24 @@
             <img src="./img/icon-logo.png" alt="Coming soon logo">
             <h1>Coming soon</h1>
             <p>An awesome new company for web resources is coming very soon. Enter your email to request an early invitation.</p>
-            <div class="clock">
-                CLOCK
+        <div class="clock">
+            <div class="time">
+                <div class="value">432</div>
+                <div class="label">days</div>
             </div>
+            <div class="time">
+                <div class="value">09</div>
+                <div class="label">hours</div>
+            </div>
+            <div class="time">
+                <div class="value">37</div>
+                <div class="label">minutes</div>
+            </div>
+            <div class="time">
+                <div class="value">39</div>
+                <div class="label">seconds</div>
+    </div>                
+    </div>
             <form>
                 SUBSCRIBE FORM
             </form>
@@ -38,7 +53,7 @@
     <div class="content container">
         <div class="row">
             <div class="left">
-                <h3>About starup</h3>
+                <h3>About startup</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque odio modi a voluptate eum doloremque <a href="#">Matrox</a> laboriosam sunt aspernatur repellat.</p>
                 <div class="progress-bar">
                     PROGRESS-BAR
