--- a/index.html
+++ b/index.html
@@ -56,16 +56,40 @@
                 <h3>About startup</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque odio modi a voluptate eum doloremque <a href="#">Matrox</a> laboriosam sunt aspernatur repellat.</p>
                 <div class="progress-bar">
-                    PROGRESS-BAR
-                </div>
-                <div class="progress-bar">
-                    PROGRESS-BAR
-                </div>
-                <div class="progress-bar">
-                    PROGRESS-BAR
+                    <div class="texts">
+                        <div class="title">UX Design</div>
+                        <div class="value">90%</div>
+                    </div>
+                    <div class="bar">
+                        <div class="value">
+                            <div class="loading"></div>
+                    </div>
                 </div>
             </div>
-        <div class="right">
+                <div class="progress-bar">
+                    <div class="texts">
+                        <div class="title">Web Design</div>
+                        <div class="value">80%</div>
+                    </div>
+                    <div class="bar">
+                        <div class="value" style="width: 80%;">
+                        <div class="loading"></div>
+                    </div>
+                    </div>
+                </div>
+                <div class="progress-bar">
+                    <div class="texts">
+                        <div class="title">Web Development</div>
+                        <div class="value">50%</div>
+                    </div>
+                    <div class="bar">
+                        <div class="value" style="width: 50%;">
+                            <div class="loading"></div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            <div class="right">
                 <h3>Have any question?</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque <a href="mailto:myemail@gmail.asd">myemail@gmail.asd</a> odio modi a tempore voluptate sunt aspernatur repellat.</p>
                 <form>
