--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="row">
             <div class="left">
                 <h3>About startup</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque odio modi a voluptate eum doloremque <a href="#">Matrox</a> laboriosam sunt aspernatur repellat.</p>
+                <p>Matrox material design multi-purpose html template. It comes with huge content and background variants. <a href="#">Matrox</a> is coming very soon. We are nearly there.. </p>
                 <div class="progress-bar">
                     <div class="texts">
                         <div class="title">UX Design</div>
@@ -91,7 +91,7 @@
                 </div>
             <div class="right">
                 <h3>Have any question?</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque <a href="mailto:myemail@gmail.asd">myemail@gmail.asd</a> odio modi a tempore voluptate sunt aspernatur repellat.</p>
+                <p> You can use contact form below or contact us via e-mail at: <a href="mailto:myemail@gmail.asd">myemail@gmail.asd</a> Contact form is fully working and very easy to customize. </p>
                 <form>
                     MESSAGE FORM
                 </form>
@@ -101,7 +101,13 @@
  <footer class="container bg-blue">
         <div class="row">
             <div class="socials">
-                ICON LIST
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-dribbble"></a>
+                <a href="#" class="fa fa-tumblr"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-rss"></a>        
             </div>
             <div class="footer-content">
                 <img src="./img/logo-white.png" alt="Coming soon logo white">
