--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     </div>                
     </div>
             <form>
-                SUBSCRIBE FORM
+            
+                <div class="btn">Subscribe now</div>
             </form>
             <div class="mouse">
                 <div class="wheel"></div>
@@ -94,12 +95,14 @@
                 <p> You can use contact form below or contact us via e-mail at: <a href="mailto:myemail@gmail.asd">myemail@gmail.asd</a> Contact form is fully working and very easy to customize. </p>
                 <form>
                     MESSAGE FORM
+                    <div class="btn btn-round">Send message</div>
                 </form>
             </div>
         </div>
     </div>
  <footer class="container bg-blue">
         <div class="row">
+            <a href="#" class="fa fa-angle-up btn btn-round"></a>
             <div class="socials">
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="#" class="fa fa-twitter"></a>
