--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
                 <h3>Have any question?</h3>
                 <p> You can use contact form below or contact us via e-mail at: <a href="mailto:myemail@gmail.asd">myemail@gmail.asd</a> Contact form is fully working and very easy to customize. </p>
                 <form>
-                    MESSAGE FORM
+                    <input type="text" placeholder="Name" id="name">
+                    <input type="email" placeholder="Email" id="email2">
+                    <textarea id="message" placeholder="Message"></textarea>
                     <div class="btn btn-round">Send message</div>
                 </form>
             </div>
