--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>                
     </div>
             <form>
-            
+            <input type="email" name="Subscribe-email" placeholder="Type your email"> 
                 <div class="btn">Subscribe now</div>
             </form>
             <div class="mouse">
